Fix filename typo

--- a/langturn.com-translations-33/index.html
+++ b/langturn.com-translations-33/index.html
@@ -37,7 +37,7 @@
 </ul></li>
 </ul>
 <h2 id="要約">要約</h2>
-<p>Gemfileは依存関係を厳密に指定するのが目的なので、アプリケーションを開発するときはレポジトリにチェックインすべき。 一方Gemを開発するときは依存関係を緩やかに定義し柔軟性を持たせることが重要なポイントなので、Gemfileはレポジトリにチェックインしてはいけない。 他、Gemfileとgemspecをうまく組み合わせて使う方法など。</p>
+<p><del>Gemfile</del>Gemfile.lock(修正)は依存関係を厳密に指定するのが目的なので、アプリケーションを開発するときはレポジトリにチェックインすべき。 一方Gemを開発するときは依存関係を緩やかに定義し柔軟性を持たせることが重要なポイントなので、<del>Gemfile</del>Gemfile.lock(修正)はレポジトリにチェックインしてはいけない。 他、Gemfileとgemspecをうまく組み合わせて使う方法など。</p>
 <h2 id="短い方の説明">短い方の説明</h2>
 <p>アプリケーションもgemも「依存関係」という同じような概念を持っているように思えるかも知れませんが、この言葉はそれぞれにとって重要な違いがあります。 Gemは他のgemとそのバージョンに依存しますが、それらがどこから来るのかは気にしません。 一方アプリケーションは厳密にデプロイメントを調整する必要があります。</p>
 <p><strong>Gemを開発するときは</strong>、Gemfileには<a href="http://gembundler.com/rubygems.html">gemspec</a>を使って重複を回避しましょう。 普通、GemfileにはRubygemsのソースとgemspecの一行だけが書かれるべきです。 <strong>Gemfile.lockはバージョン管理にチェックインしてはいけません</strong>。 Gemコマンドで扱われないような精密さを要求してしまうからです。 精密さが満たされるとしても、利用者側からすると依存関係のバージョンがズレていると使えないことになってしまって不便です。</p>
