--- a/langturn.com-translations-33/index.html
+++ b/langturn.com-translations-33/index.html
@@ -33,7 +33,7 @@
 <li>Translation:
 <ul>
 <li>URL: <a href="http://langturn.com/translations/33?locale=ja">gemspecとGemfileの役割をはっきりさせておく</a> (Not Found)</li>
-<li>Salvage from <a href="https://web.archive.org/web/20130402161316/http://langturn.com/translations/33?locale=ja">Internet Archive</a></li>
+<li>Salvaged from <a href="https://web.archive.org/web/20130402161316/http://langturn.com/translations/33?locale=ja">Internet Archive</a></li>
 </ul></li>
 </ul>
 <h2 id="要約">要約</h2>
